# metro

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  build.gradle  city.json  jest.config.js  package-js-tests.json  package-lock.json  package.json  playwright.config.js  playwright.live.config.js  pyproject.toml  run_checks.sh  run_ui_tests.sh  run_webapp.py  settings.gradle  setup.py  test-results-live.json
.github/workflows/: ci.yml  deploy.yml  pages.yml  pr-validation.yml  pr.yml
docs/: city.json  index.html  metro-web.js
lib/: metro.py  population.py  svg.py
metro/: __init__.py  api.py  app.py  city.py  city_simulator.py  growth.py  main.py  model.py  population.py  population_state.py  renderer.py  rng.py  roman_grid.py  seed_system.py  svg.py  temporal_simulator.py
metro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
metro/commands/: evolve.py  generate.py  render.py
metro/data/: occupations.txt
metro/model/: bounded.py  color.py  point2d.py  thing_stack.py
metro/model/shapes/: circle.py  group.py  rectangle.py  shape.py
metro/model/things/: simple_thing.py  thing.py
playwright-report/: index.html
playwright-report-live/: index.html
population/lib/: metro.py  svg.py
src/main/java/org/rl337/metro/: App.java  Renderer.java
src/main/java/org/rl337/metro/model/: Bound.java  Bounded.java  Color.java  Point2D.java  Shape.java  ThingStack.java
src/main/java/org/rl337/metro/model/shapes/: AbstractShape.java  Circle.java  CompositeShape.java  Group.java  Rectangle.java  Shape.java
src/main/java/org/rl337/metro/model/things/: SimpleThing.java  Thing.java
src/test/java/org/rl337/metro/model/: TestShapes.java
test-results/: .last-run.json
tests/: __init__.py  test_cli.py  test_color.py  test_point2d.py  test_shapes.py  test_thing_stack.py
tests/js/: data-structure-validation.test.js
tests/ui/: README.md  TESTING_GUIDE.md  global-setup.js  global-teardown.js  test_live_site.spec.js  test_live_site_simple.spec.js  test_webapp_accessibility.spec.js  test_webapp_basic.spec.js  test_webapp_deterministic.spec.js  test_webapp_errors.spec.js  test_webapp_functionality.spec.js  test_webapp_js_errors.spec.js  test_webapp_performance.spec.js  test_webapp_visual.spec.js
