[tool.poetry]
name = "metro"
version = "0.1.0"
description = ""
authors = ["Jules <agent@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.11.7"

[tool.poetry.scripts]
metro = "metro.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
